<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.example.android.bluetoothlegatt.DeviceInfoFragment">

  <LinearLayout android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="5dp">
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_status"
        android:textSize="20sp"/>
    <Space android:layout_width="5dp"
        android:layout_height="wrap_content"/>
    <TextView android:id="@+id/connection_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disconnected"
        android:textSize="20sp"/>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:background="@drawable/list_item_border">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/name_label"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/name_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/no_data"
        android:textAlignment="viewEnd"
        android:gravity="right"
        android:textSize="20sp" />
  </LinearLayout>

  <LinearLayout android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/list_item_border">
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/model_label"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/model_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/no_data"
        android:textAlignment="viewEnd"
        android:gravity="right"
        android:textSize="20sp" />
  </LinearLayout>
  <LinearLayout android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/list_item_border">
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/hardware_version_label"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/hardware_version_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/no_data"
        android:textAlignment="viewEnd"
        android:gravity="right"
        android:textSize="20sp" />
  </LinearLayout>
  <LinearLayout android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/list_item_border">
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/firmware_version_label"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/firmware_version_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/no_data"
        android:textAlignment="viewEnd"
        android:gravity="right"
        android:textSize="20sp" />
  </LinearLayout>
  <LinearLayout android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/list_item_border">
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/serial_number_label"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/serial_number_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/no_data"
        android:textAlignment="viewEnd"
        android:gravity="right"
        android:textSize="20sp" />
  </LinearLayout>

</LinearLayout>